--- a/danse_studio/main1/templates/Student/StudentAcc.html
+++ b/danse_studio/main1/templates/Student/StudentAcc.html
@@ -46,7 +46,7 @@
                         <a href="{%url 'student_timetable'%}">Расписание</a>
                     </li>
                     <li>
-                        <a href="{%url 'subscription_list'%}">Абонeмент</a>
+                        <a href="{%url 'subscription'%}">Абонeмент</a>
                     </li>
 
 
