--- a/danse_studio/main1/templates/Manager/subscription_list.html
+++ b/danse_studio/main1/templates/Manager/subscription_list.html
@@ -1,9 +1,5 @@
 {% extends 'Manager/baseManager.html' %}
- {% block search %}
-    <form class="form-inline my-2 my-lg-0"  method="GET" action="{% url 'students_list' %}">
-      <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search" name="q">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="searchButton">Поиск</button>
-    </form>{% endblock %}
+
 {%block content%}
 <table class="table table-striped">
   <thead>
@@ -30,5 +26,9 @@
   {% endfor %}
   </tbody>
 </table>
+
+<form class="form-inline" style="margin:2% 0;">
+<a href="{%url 'add_subscription'%}" role="button" class="btn btn-info " style="margin:0 2%"><li style="list-style:none;">Добавить абонемент</li></a>
+</form>
 
 {% endblock %}
