--- a/danse_studio/main1/templates/Manager/timetable_list.html
+++ b/danse_studio/main1/templates/Manager/timetable_list.html
@@ -28,7 +28,10 @@
   </tbody>
 </table>
 
+<form class="form-inline" style="margin:2% 0;">
+<a href="{%url 'add_timetable'%}" role="button" class="btn btn-info " style="margin:0 2%"><li style="list-style:none;">Добавить расписание</li></a>
 
+</form>
 
 
 
