--- a/danse_studio/main1/templates/Manager/baseManager.html
+++ b/danse_studio/main1/templates/Manager/baseManager.html
@@ -60,6 +60,6 @@
        </div>
     <div style="padding:0 3em;" class="container-fluid">{%block content%}{% endblock %}</div>
 </div>
-<script>{% block script %}{% endblock %}</script>
+{% block script %}{% endblock %}
 </body>
 </html>
